using url for data file

--- a/preprocessing_test.ipynb
+++ b/preprocessing_test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlJBaPnEg7XIWweQy3rfia",
+      "authorship_tag": "ABX9TyPmxkDbY/3J23Mhid721hkt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,8 +49,54 @@
       "metadata": {
         "id": "nRR5rSQGcaB6"
       },
-      "execution_count": 19,
+      "execution_count": 257,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "demonstration of lemmatizer"
+      ],
+      "metadata": {
+        "id": "Ptp7ZBjc2bP5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.stem import WordNetLemmatizer\n",
+        "wnl = WordNetLemmatizer()\n",
+        "print(wnl.lemmatize('dogs'))\n",
+        "\n",
+        "print(wnl.lemmatize('churches'))\n",
+        "\n",
+        "print(wnl.lemmatize('aardwolves'))\n",
+        "\n",
+        "print(wnl.lemmatize('abaci'))\n",
+        "\n",
+        "print(wnl.lemmatize('hardrock'))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ytY_lBVWzWK9",
+        "outputId": "53896ea0-9ce1-4a80-da68-54ff4d49053b"
+      },
+      "execution_count": 258,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dog\n",
+            "church\n",
+            "aardwolf\n",
+            "abacus\n",
+            "hardrock\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -63,10 +109,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 259,
       "metadata": {
         "id": "ywe0Cu7Rbcwr",
-        "outputId": "d897ed50-7ef6-4b3e-cf19-520001ad3102",
+        "outputId": "b5870c73-7373-477a-e6da-eb7d0e2fb3c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -93,14 +139,14 @@
     {
       "cell_type": "code",
       "source": [
-        "file_url = 'github_url'\n",
-        "ReviewsFile = pd.read_csv('words_test.csv') #reads dataset\n",
+        "file_url = \"https://raw.githubusercontent.com/Shayna003/google-colab-test/main/preprocessing_test.csv\"\n",
+        "data_file = pd.read_csv(file_url) #reads dataset\n",
         "\n"
       ],
       "metadata": {
         "id": "_GuuL_vbmrak"
       },
-      "execution_count": 21,
+      "execution_count": 260,
       "outputs": []
     },
     {
@@ -108,50 +154,57 @@
       "source": [
         "def pre_processing():\n",
         "    nlp = spacy.blank('en')\n",
-        "    ReviewsFile['text'] = ReviewsFile['text'].astype(str).str.lower() #makes all reviews lowercase\n",
+        "    data_file['text'] = data_file['text'].astype(str).str.lower() #makes all reviews lowercase\n",
         "    punct = \"\\n\\r\" + string.punctuation\n",
-        "    ReviewsFile['text'] = ReviewsFile['text'].str.translate(str.maketrans('', '', punct)) #removes all punctuation\n",
+        "    data_file['text'] = data_file['text'].str.translate(str.maketrans('', '', punct)) #removes all punctuation\n",
         "    stop = stopwords.words('english')\n",
-        "    ReviewsFile['text'] = ReviewsFile['text'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)])) # removes stopwords\n",
-        "    ReviewsFile['text'].apply(lemmatisation)  #lemmatisation : changing words with same meaning into one word\n",
+        "    data_file['text'] = data_file['text'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)])) # removes stopwords\n",
+        "\n",
+        "    data_file['text'] = data_file['text'].map(lemmatisation)  #lemmatisation : changing words with same meaning into one word\n",
         "\n",
         "def lemmatisation(text):\n",
-        "    return [lemmatizer.lemmatize(w) for w in tokeniser.tokenize(text)]"
+        "    print(tokeniser.tokenize(text))\n",
+        "    print([lemmatizer.lemmatize(w) for w in tokeniser.tokenize(text)])\n",
+        "    s = ''\n",
+        "    for w in tokeniser.tokenize(text):\n",
+        "      s += lemmatizer.lemmatize(w)\n",
+        "      s += ' '\n",
+        "    s = s[:-1]\n",
+        "    return s"
       ],
       "metadata": {
         "id": "kniZiddYpL8W"
       },
-      "execution_count": 22,
+      "execution_count": 261,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ReviewsFile.head(5)"
+        "data_file.head(3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 143
         },
         "id": "nnKlRjQsoQww",
-        "outputId": "02d43c7f-f6ec-4771-b8f9-61c2845c5b88"
+        "outputId": "34d646c1-296a-40d5-a30f-a7cd71ae5050"
       },
-      "execution_count": 23,
+      "execution_count": 262,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "                                                text\n",
-              "0                                           absolute\n",
-              "1                          this is a sample sentence\n",
-              "2                                   testing number 2\n",
-              "3  a sentence with CAPITAL letters, punctuations ..."
+              "0                          dogs don't go to churches\n",
+              "1  CAPITAL letters, punctuations and some stop wo...\n",
+              "2                                         🔥 emoji :)"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0404d5f7-5c32-4f17-be97-e521d8a25673\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-001c6140-be2e-43b3-b69f-0a211cc51ef2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -176,19 +229,15 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>absolute</td>\n",
+              "      <td>dogs don't go to churches</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>this is a sample sentence</td>\n",
+              "      <td>CAPITAL letters, punctuations and some stop wo...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>testing number 2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>a sentence with CAPITAL letters, punctuations ...</td>\n",
+              "      <td>🔥 emoji :)</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -196,7 +245,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0404d5f7-5c32-4f17-be97-e521d8a25673')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-001c6140-be2e-43b3-b69f-0a211cc51ef2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -248,12 +297,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0404d5f7-5c32-4f17-be97-e521d8a25673 button.colab-df-convert');\n",
+              "        document.querySelector('#df-001c6140-be2e-43b3-b69f-0a211cc51ef2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0404d5f7-5c32-4f17-be97-e521d8a25673');\n",
+              "        const element = document.querySelector('#df-001c6140-be2e-43b3-b69f-0a211cc51ef2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -273,8 +322,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-70ccb5aa-5d03-443d-8cbf-86c99729e9d8\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-70ccb5aa-5d03-443d-8cbf-86c99729e9d8')\"\n",
+              "<div id=\"df-a51ed2aa-c52b-49bc-bad3-fda9b3dc44ea\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a51ed2aa-c52b-49bc-bad3-fda9b3dc44ea')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -393,7 +442,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-70ccb5aa-5d03-443d-8cbf-86c99729e9d8 button');\n",
+              "        document.querySelector('#df-a51ed2aa-c52b-49bc-bad3-fda9b3dc44ea button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -404,7 +453,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 262
         }
       ]
     },
@@ -414,39 +463,55 @@
         "pre_processing()"
       ],
       "metadata": {
-        "id": "oxOA_ajXmupL"
+        "id": "oxOA_ajXmupL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41c297f2-a002-4726-e6c6-e46ee9747a0b"
       },
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": 263,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['dogs', 'dont', 'go', 'churches']\n",
+            "['dog', 'dont', 'go', 'church']\n",
+            "['capital', 'letters', 'punctuations', 'stop', 'words']\n",
+            "['capital', 'letter', 'punctuation', 'stop', 'word']\n",
+            "['🔥', 'emoji']\n",
+            "['🔥', 'emoji']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "ReviewsFile.head(5)"
+        "data_file.head(3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 143
         },
-        "outputId": "b8a98ba8-e95b-410d-bc90-e782fc5f4646",
+        "outputId": "f648c4a1-bda7-46d4-fc1c-1f4a05ce4381",
         "id": "AeHCF4zVo6EA"
       },
-      "execution_count": 25,
+      "execution_count": 264,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                                               text\n",
-              "0                                          absolute\n",
-              "1                                   sample sentence\n",
-              "2                                  testing number 2\n",
-              "3  sentence capital letters punctuations stop words"
+              "                                   text\n",
+              "0                    dog dont go church\n",
+              "1  capital letter punctuation stop word\n",
+              "2                               🔥 emoji"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ba7a73d9-71b6-424d-b4b1-32809d48b3f8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3c73ba17-3ad1-4d1d-8c34-33799b28cd1c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -471,19 +536,15 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>absolute</td>\n",
+              "      <td>dog dont go church</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>sample sentence</td>\n",
+              "      <td>capital letter punctuation stop word</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>testing number 2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>sentence capital letters punctuations stop words</td>\n",
+              "      <td>🔥 emoji</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -491,7 +552,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba7a73d9-71b6-424d-b4b1-32809d48b3f8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3c73ba17-3ad1-4d1d-8c34-33799b28cd1c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -543,12 +604,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ba7a73d9-71b6-424d-b4b1-32809d48b3f8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3c73ba17-3ad1-4d1d-8c34-33799b28cd1c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ba7a73d9-71b6-424d-b4b1-32809d48b3f8');\n",
+              "        const element = document.querySelector('#df-3c73ba17-3ad1-4d1d-8c34-33799b28cd1c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -568,8 +629,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-696b42e4-3810-45cf-9d97-a35215aea743\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-696b42e4-3810-45cf-9d97-a35215aea743')\"\n",
+              "<div id=\"df-1c12ed24-429a-4343-b606-9d58f4ac17f9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1c12ed24-429a-4343-b606-9d58f4ac17f9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -688,7 +749,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-696b42e4-3810-45cf-9d97-a35215aea743 button');\n",
+              "        document.querySelector('#df-1c12ed24-429a-4343-b606-9d58f4ac17f9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -699,9 +760,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 264
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "notice how lemmatizer turned \"dogs\" to dog, removed special characters, stop words, and turned all letters to lower case."
+      ],
+      "metadata": {
+        "id": "OQ7yAYR3yCqx"
+      }
     }
   ]
 }
